--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,6 @@
+/*Importando fontes*/
+@import url('https://fonts.googleapis.com/css2?family= Inter:wght@400;700 & display =swap');
+
 /* bloco de codigo para resetar margin e padding */
 * {
     margin: 0;
@@ -9,10 +12,14 @@
     --cinza-secundario: #C0C0C0;
     --botao-azul: #167BF7;
     --cor-de-fundo: #00030C;
+    --fonte-principal: 'Inter';
 }
 
 body {
     background-color: var(--cor-de-fundo);
+    font-family: var(--fonte-principal);
+    font-size: 16px;
+    font-weight: 400;
 }
 
 .principal {
@@ -27,8 +34,9 @@ body {
     grid-template-columns: 50% 50%;
 }
 
-.titulo {
+.container__titulo {
     color: var(--branco-principal);
+    font-size: 28px;
 }
 
 .container__botao {
@@ -46,5 +54,6 @@ body {
 }
 
 .container__aviso {
-    
+    font-size: 12px;
+    color: var(--cinza-secundario);
 }
