--- a/style/style.css
+++ b/style/style.css
@@ -92,3 +92,13 @@ body {
     opacity: 0.8;
     font-size: 16px;
 }
+
+.container__descricao {
+    padding: 2em;
+}
+
+.secundario__botao {
+    display: inline-block;
+    margin-top: 1em;
+    margin-left: 0;
+}
