--- a/style/style.css
+++ b/style/style.css
@@ -39,6 +39,7 @@ body {
 .container__caixa {
     margin: 0 6em;
 }
+
 .container__titulo {
     color: var(--branco-principal);
     font-size: 28px;
@@ -101,4 +102,30 @@ body {
     display: inline-block;
     margin-top: 1em;
     margin-left: 0;
+}
+
+.dispositivos {
+    text-align: center;
+}
+
+.dispositivos__titulos {
+    color: var(--branco-principal);
+    font-family: var(--fonte-principal);
+    font-size: 48px;
+    font-weight: 700;
+}
+
+.dispositivos__lista {
+    display: flex;
+    justify-content: center;
+    /*Tira estilo da lista*/
+    list-style-type: none;
+    margin: 4em 0;
+}
+
+.lista__item {
+    color: var(--branco-principal);
+    font-size: 32px;
+    font-weight: 700;
+    font-family: var(--fonte-principal);
 }
