--- a/style/style.css
+++ b/style/style.css
@@ -3,129 +3,147 @@
 
 /* bloco de codigo para resetar margin e padding */
 * {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 :root {
-    --branco-principal: #ffffff;
-    --cinza-secundario: #C0C0C0;
-    --botao-azul: #167BF7;
-    --cor-de-fundo: #00030C;
-    --fonte-principal: 'Inter';
+  --branco-principal: #ffffff;
+  --cinza-secundario: #c0c0c0;
+  --botao-azul: #167bf7;
+  --cor-de-fundo: #00030c;
+  --fonte-principal: 'Inter';
 }
 
 body {
-    background-color: var(--cor-de-fundo);
-    font-family: var(--fonte-principal);
-    font-size: 16px;
-    font-weight: 400;
+  background-color: var(--cor-de-fundo);
+  font-family: var(--fonte-principal);
+  font-size: 16px;
+  font-weight: 400;
 }
 
 .principal {
-    background-image: url("../assets/Background.png");
-    background-repeat: no-repeat;
-    background-size: contain;
-    align-items: center;
-    text-align: center;
+  background-image: url('../assets/Background.png');
+  background-repeat: no-repeat;
+  background-size: contain;
+  align-items: center;
+  text-align: center;
 }
 
 .container {
-    height: 100vh;
-    display: grid;
-    grid-template-columns: 50% 50%;
+  height: 100vh;
+  display: grid;
+  grid-template-columns: 50% 50%;
 }
 
 .container__caixa {
-    margin: 0 6em;
+  margin: 0 6em;
 }
 
 .container__titulo {
-    color: var(--branco-principal);
-    font-size: 28px;
+  color: var(--branco-principal);
+  font-size: 28px;
 }
 
 .container__img {
-    margin: 1em 0 2em 0;
+  margin: 1em 0 2em 0;
 }
 
 .container__botao {
-    background-color: var(--botao-azul);
-    color: var(--branco-principal);
-    text-decoration: none;
-    border-radius: 5px;
-    padding: 1em;
-    display: block;
-    margin: 1em;
+  background-color: var(--botao-azul);
+  color: var(--branco-principal);
+  text-decoration: none;
+  border-radius: 5px;
+  padding: 1em;
+  display: block;
+  margin: 1em;
 }
 
 .botao_secundario {
-    background-color: transparent;
-    border: 2px solid var(--branco-principal);
+  background-color: transparent;
+  border: 2px solid var(--branco-principal);
 }
 
 .container__aviso {
-    font-size: 12px;
-    color: var(--cinza-secundario);
+  font-size: 12px;
+  color: var(--cinza-secundario);
 }
 
 .secundario {
-    align-items: center;
-    margin: 0 10em;
+  align-items: center;
+  margin: 0 10em;
 }
 
 .secundario__img {
-    width: 80%;
+  width: 80%;
 }
 
 .descricao__titulo {
-    font-family: var(--fonte-principal);
-    color: var(--branco-principal);
-    font-weight: 700;
-    font-size: 48px;
-    margin-bottom: 0.1em;
+  font-family: var(--fonte-principal);
+  color: var(--branco-principal);
+  font-weight: 700;
+  font-size: 48px;
+  margin-bottom: 0.1em;
 }
 
 .descricao__texto {
-    font-family: var(--fonte-principal);
-    color: var(--cinza-secundario);
-    font-weight: 400;
-    opacity: 0.8;
-    font-size: 16px;
+  font-family: var(--fonte-principal);
+  color: var(--cinza-secundario);
+  font-weight: 400;
+  opacity: 0.8;
+  font-size: 16px;
 }
 
 .container__descricao {
-    padding: 2em;
+  padding: 2em;
 }
 
 .secundario__botao {
-    display: inline-block;
-    margin-top: 1em;
-    margin-left: 0;
+  display: inline-block;
+  margin-top: 1em;
+  margin-left: 0;
 }
 
 .dispositivos {
-    text-align: center;
+  text-align: center;
 }
 
 .dispositivos__titulos {
-    color: var(--branco-principal);
-    font-family: var(--fonte-principal);
-    font-size: 48px;
-    font-weight: 700;
+  color: var(--branco-principal);
+  font-family: var(--fonte-principal);
+  font-size: 48px;
+  font-weight: 700;
 }
 
 .dispositivos__lista {
-    display: flex;
-    justify-content: center;
-    /*Tira estilo da lista*/
-    list-style-type: none;
-    margin: 4em 0;
+  display: flex;
+  justify-content: center;
+  /*Tira estilo da lista*/
+  list-style-type: none;
+  margin: 4em 0;
 }
 
 .lista__item {
-    color: var(--branco-principal);
-    font-size: 32px;
-    font-weight: 700;
-    font-family: var(--fonte-principal);
+  color: var(--branco-principal);
+  font-size: 32px;
+  font-weight: 700;
+  font-family: var(--fonte-principal);
+}
+
+.rodape {
+    text-align: center;
+}
+
+.rodape__lista {
+  display: flex;
+  justify-content: center;
+}
+
+.lista__link {
+  text-decoration: none;
+  list-style-type: none;
+  color: var(--branco-principal);
+  padding: 10px;
+  font-size: 16px;
+  font-weight: 400;
 }
